Added Caluclator_Test Prorject
Added Calculator test and referenced it with calculator_logic where all the methods will be tested from calculator_logic

--- a/Calculator_Logic/Calculator_Logic.csproj
+++ b/Calculator_Logic/Calculator_Logic.csproj
@@ -4,4 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calculator_Test\Calculator_Test.csproj" />
+  </ItemGroup>
 </Project>
