Added calculator model and Added first API add method
Deleted the default weatherforecast model, added first api "add"

--- a/Calculator_API/Calculator_API.csproj
+++ b/Calculator_API/Calculator_API.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Calculator_Logic\Calculator_Logic.csproj">
+    <ProjectReference Include="..\Calculator_Logic\Calculator.Logic.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
